
MikMod 3.2.3 was released on 03/Oct/2013
This is a maintenance release to fix minor bugs since mikmod-3.2.2

BUGFIXES

- Made MikMod compilable against older versions of libmikmod
  without MikMod_Free().
- Fixed a minor buffer overrun (sf.net bug #2).
- Fixed a minor string format issue.
- Updated configury to support latest autotools.


Summary of changes between MikMod 3.1.6 and MikMod 3.2.2 (Vitray):
==================================================================

MikMod 3.2.2 was released on 23/Jun/2012
beta1: Mon Feb 2, 2004
beta0: never officially released

THANKS

- The winner of the ``it's rainy day, so I'll rewrite MikMod'' contest this
  time is Andrew Zabolotny. The colored MikMod looks great ! Thanks a lot !

- To Frank Loemker, who has done many changes since the last release in 1999,
  has improved the widget system a lot, added a file selector, theme support,
  improved the configuration routines, recursive directory scanning, made
  the player and library run in a separate thread, added win32 support
  (with lcc), fixed problems with DJGPP, and fixed a lot of small bugs.
  (please note that some of theses changes may have been done by
  Andrew Zabolotny. Frank Loemker sent me a big patch so I cannot know for
  sure who did what).


NEW FEATURES

- On terminals that support it, colors. There is a built-in theme editor
  in the configuration panel. Themes are loaded and saved from the
  config file. Set the environment variable TERM to mono to
  disable this under OS/2 and DOS.

- Mikmod will now display it's version and the song name or filename
  currently being played in the terminal title bar. On unix, there is
  support for xterm compatible title setting (rxvt, Eterm, aixterm,
  dtterm...), and a few others (iris-ansi, hpterm). It is also supported
  under win32.

- If using libmikmod 3.2, sample and instrument panels are dynamic, displaying
  which samples/instruments are currently played, and a volume panel displays