@@ -3,6 +3,12 @@
 /* Define if your libmikmod has MikMod_free (not found in <= 3.2.0-beta2). */
 #undef HAVE_MIKMOD_FREE
 
+/* djgpp-v2.04 does provides [v]snprintf functions! */
+/* Define to 1 if you have the `snprintf' function. */
+/* #define HAVE_SNPRINTF 1 */
+/* Define to 1 if you have the `vsnprintf' function. */
+/* #define HAVE_VSNPRINTF 1 */
+
 /* Define if you don't have vprintf but do have _doprnt.  */
 #define HAVE_DOPRNT	1
 
